--- a/public/assets/styles/reset.scss
+++ b/public/assets/styles/reset.scss
@@ -23,6 +23,10 @@ body {
   line-height: 1.6;
 }
 
+body[data-theme="light"] {
+  background-color: var(--smoke-gray-7);
+}
+
 code {
   font-family: $font-code;
 }
