fix: replace blue-500 and text-blue-600 with UAB colors
- Replace --colors-blue-500 with --uab-green in PostDetails border
- Replace text-blue-600 with text-gray-900 for links and text
- Updated Home page back button and ManageBilling links

--- a/public/components/PostDetails/PostDetails.scss
+++ b/public/components/PostDetails/PostDetails.scss
@@ -61,7 +61,7 @@
   }
 
   &__actions {
-    border-top: 5px solid var(--colors-blue-500);
+    border-top: 5px solid var(--uab-green);
     padding-top: spacing(4);
     margin-top: spacing(8);
 
